--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=timestamp
 MODULE_TYPE=Processing
 
 # REQUIRED API SETTINGS
@@ -11,3 +11,7 @@ INGRESS_PORT=80
 EGRESS_URLS=https://hookb.in/example1,https://hookb.in/example2
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
+
+TIMESTAMP_LABEL=date
+FORMAT=%d-%b-%Y
+TIMEZONE=CET
