--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,17 @@
 version: "3.0"
 services:
-  boilerplate:
+  timestamp:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     environment:
-      MODULE_NAME: "boilerplate"
+      MODULE_NAME: "timestamp"
       MODULE_TYPE: "Processing"
       INGRESS_HOST: "0.0.0.0"
       INGRESS_PORT: "80"
       EGRESS_URLS: "https://testdockercompose.free.beeceptor.com"
+      TIMESTAMP_LABEL: "date"
+      FORMAT: "%d-%b-%Y"
+      TIMEZONE: "CET"
     ports:
       - 80:80
