--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,14 @@
 version: "3.0"
 services:
-  timestamp:
+  boilerplate:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     environment:
-      MODULE_NAME: "timestamp"
+      MODULE_NAME: "boilerplate"
       MODULE_TYPE: "Processing"
       INGRESS_HOST: "0.0.0.0"
       INGRESS_PORT: "80"
       EGRESS_URLS: "https://testdockercompose.free.beeceptor.com"
-      TIMESTAMP_LABEL: "date"
-      FORMAT: "%d-%b-%Y"
-      TIMEZONE: "CET"
     ports:
       - 80:80
