--- a/Module.yaml
+++ b/Module.yaml
@@ -639,4 +639,4 @@ tags:
   - '1.0.0'
   - 'Date'
   - 'Time'
-icon: 'https://some.url/to/icon.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_timestamp_process.png'    # Icon URL that will be displayed in the UI.
