--- a/Module.yaml
+++ b/Module.yaml
@@ -7,10 +7,10 @@ categories:
   - 'Timer'
 type: 'Processing'
 image:
-  name: 'weevenetwork/timestamp'
+  name: 'beetaone/timestamp'
   tag: 'v1.0.1'
-  homepage: 'https://hub.docker.com/r/weevenetwork/timestamp'
-repository: 'https://github.com/weeve-modules/timestamp'
+  homepage: 'https://hub.docker.com/r/beetaone/timestamp'
+repository: 'https://github.com/beetaone/module-timestamp'
 envs:
   - name: Timestamp Label
     key: TIMESTAMP_LABEL
@@ -639,4 +639,4 @@ tags:
   - '1.0.0'
   - 'Date'
   - 'Time'
-icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_timestamp_process.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_timestamp_process.png'    # Icon URL that will be displayed in the UI.he UI.
